--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>enjoyoradmin</title>
+    <title>银江资本基金后台管理系统</title>
+    <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/public.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/icon/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/sweetalert.css">
+    <script type="text/javascript" charset="utf-8" src="./static/js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="./static/js/sweetalert.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="./static/js/compatibility.js"></script>
+    <script type="text/javascript" charset="utf-8" src="./static/js/pdf.js"></script>
   </head>
-  <body>
+  <body style="position:absolute;width:100%;height:100%;min-height:700px;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
